--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dayjs": "^1.11.13",
     "firebase": "^12.0.0",
     "next": "15.4.4",
     "react": "19.1.0",
